[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylgrams"
version = "0.1"
description = 'A Python-based gloss of the RaMS package in R'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "William Kumler", email = "wkumler@uw.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/wkumler/pylgrams#README.md"
Issues = "https://github.com/wkumler/pylgrams/issues"
Source = "https://github.com/wkumler/pylgrams"
