[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylgrams"
version = "0.1.1"
description = 'A Python-based gloss of the RaMS package in R'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["mass spectrometry", "R", "metabolomics", "proteomics", "LCMS", "GCMS", "MS"]
authors = [
  { name = "William Kumler", email = "wkumler@uw.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = ["numpy", "pandas", "lxml", "tqdm"]

[project.urls]
Documentation = "https://github.com/wkumler/pylgrams?tab=readme-ov-file#pylgrams"
Issues = "https://github.com/wkumler/pylgrams/issues"
Source = "https://github.com/wkumler/pylgrams"
